--- a/src/Containers/GamePage/GamePage.module.css
+++ b/src/Containers/GamePage/GamePage.module.css
@@ -1,536 +1,573 @@
 .gamepage {
-    height: 100vh;
-    background-color: #0f1011;
+  height: 100vh;
+  background-color: #0f1011;
+}
+
+.centerContainer {
+  margin-left: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  height: 100vh; /* Ensure full viewport height */
+  background-color: #2e8df9;
+}
+
+.tribute {
+  text-align: center;
+  padding: 20px;
+  max-width: 80%; /* Limit width for smaller screens */
+  width: 100%; /* Ensure full width */
+  border-radius: 10px; /* Rounded corners for the container */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Example shadow effect */
+}
+
+.title {
+  font-size: 2.5rem; /* Adjust font size as needed */
+  margin-bottom: 10px; /* Example spacing */
+  background-color: #2e8df9;
+  padding: 10px 20px; /* Add padding to match the tribute container */
+  border-radius: 5px; /* Rounded corners */
+  color: #d00f0f; /* Text color */
+  display: inline-block; /* Ensure inline display */
+}
+
+.subtitle {
+  font-size: 1.8rem; /* Adjust font size as needed */
+  color: #2bb698; /* Text color */
+  background-color: #f53333;
+}
+
+.videoComp {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px; /* Example spacing */
 }
 
 .gamepageContent {
-    padding: 30px 50px;
-    display: flex;
-    flex-direction: column;
+  padding: 30px 50px;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 header h1 {
-    font-family: "GT Ultrabold";
-    color: white;
-    font-size: 3.3em;
-    transform: scaleY(1.1);
-    letter-spacing: 1px;
+  font-family: "GT Ultrabold";
+  color: white;
+  font-size: 3.3em;
+  transform: scaleY(1.1);
+  letter-spacing: 1px;
 }
 
 .goBack {
-    background-color: transparent;
-    border: 1px transparent;
-    display: flex;
-    font-family: "GT Medium";
-    font-size: 1.5em;
-    gap: 8px;
-    align-items: center;
-    cursor: pointer;
+  background-color: transparent;
+  border: 1px transparent;
+  display: flex;
+  font-family: "GT Medium";
+  font-size: 1.5em;
+  gap: 8px;
+  align-items: center;
+  cursor: pointer;
 }
 
 .goBack * {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .goBack:active {
-    transform: scale(0.925);
+  transform: scale(0.925);
 }
 
 .arrow {
-    padding-top: 1px;
-    width: 20px;
-    height: 20px;
-    pointer-events: none;
+  padding-top: 1px;
+  width: 20px;
+  height: 20px;
+  pointer-events: none;
 }
 
 .arrow,
 .goBack {
-    transition: 0.275s all;
+  transition: 0.275s all;
 }
 
 .game {
-    display: flex;
-    justify-content: flex-start;
-    gap: 30px;
-    margin-top: 30px;
-    box-sizing: border-box;
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  margin-top: 30px;
+  box-sizing: border-box;
 }
 
 .gameInfo,
 .about,
 .aboutBottom {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .gameInfo {
-    justify-content: space-between;
-    width: 28%;
-    flex-shrink: 0;
+  justify-content: space-between;
+  width: 28%;
+  flex-shrink: 0;
 }
 
 .aboutTop {
-    padding: 30px 70px 30px 34px;
-    width: 110%;
-    height: 280px;
-    box-sizing: border-box;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
-    border: 1px transparent;
-    background-color: #1A1A1A;
-    overflow: scroll;
-    overflow-x: hidden;
+  padding: 30px 70px 30px 34px;
+  width: 110%;
+  height: 280px;
+  box-sizing: border-box;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border: 1px transparent;
+  background-color: #1a1a1a;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .aboutTop::after {
-    background-image: linear-gradient(180deg, transparent, #1a1a1a);
-    bottom: -32px;
-    content: "";
-    display: block;
-    height: 50px;
-    margin-top: -20px;
-    pointer-events: none;
-    position: -webkit-sticky;
-    position: sticky;
-    width: 100%;
+  background-image: linear-gradient(180deg, transparent, #1a1a1a);
+  bottom: -32px;
+  content: "";
+  display: block;
+  height: 50px;
+  margin-top: -20px;
+  pointer-events: none;
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
 }
 
 .aboutTop h2 {
-    color: white;
-    font-family: "GT Ultrabold";
-    font-size: 26px;
-    margin-bottom: 16px;
+  color: white;
+  font-family: "GT Ultrabold";
+  font-size: 26px;
+  margin-bottom: 16px;
 }
 
 .aboutTop p {
-    color: #CCCCCC;
-    font-size: 15px;
-    font-family: "GT Regular";
-    word-spacing: 2px;
-    line-height: 1.65;
+  color: #cccccc;
+  font-size: 15px;
+  font-family: "GT Regular";
+  word-spacing: 2px;
+  line-height: 1.65;
 }
 
 .aboutBottom,
 .aboutBottomClosed {
-    background-color: #262626;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 110%;
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
-    box-sizing: border-box;
+  background-color: #262626;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 110%;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  box-sizing: border-box;
 }
 
 .lastChild {
-    padding-bottom: 6px;
+  padding-bottom: 6px;
 }
 
 .aboutBottom {
-    padding: 30px 35px 20px 34px;
-    height: 270px;  
-    box-sizing: border-box;
-    animation: opening 0.5s ease-in-out forwards;
+  padding: 30px 35px 20px 34px;
+  height: 270px;
+  box-sizing: border-box;
+  animation: opening 0.5s ease-in-out forwards;
 }
 
 @keyframes opening {
-    0% {
-        height: 59px;
-    }
-    100% {
-        height: 270px;
-    }
+  0% {
+    height: 59px;
+  }
+  100% {
+    height: 270px;
+  }
 }
 
 .aboutBottomClosed {
-    padding: 20px 35px 20px 34px;  
-    box-sizing: border-box;
-    height: 59px;
+  padding: 20px 35px 20px 34px;
+  box-sizing: border-box;
+  height: 59px;
 }
 
 @keyframes closing {
-    0% {
-        height: 270px;
-    }
-    100% {
-        height: 59px;
-    }
+  0% {
+    height: 270px;
+  }
+  100% {
+    height: 59px;
+  }
 }
 
 .open {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .closed {
-    display: none;
+  display: none;
 }
 
 .aboutBottom div a {
-    text-decoration: none;
-    color: white;
-    margin-bottom: 11px;
-    font-size: 1.1em;
-    font-family: "GT Medium";
-    animation: fadeIn 0.35s ease-in-out forwards;
+  text-decoration: none;
+  color: white;
+  margin-bottom: 11px;
+  font-size: 1.1em;
+  font-family: "GT Medium";
+  animation: fadeIn 0.35s ease-in-out forwards;
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .aboutBottom div h4 {
-    line-height: 1.2;
-    font-size: 0.9em;
-    letter-spacing: 1px;
-    margin-bottom: 10px;
-    color: #999999;
-    font-family: "GT Light";
-    animation: fadeIn 0.35s ease-in-out forwards;
+  line-height: 1.2;
+  font-size: 0.9em;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  color: #999999;
+  font-family: "GT Light";
+  animation: fadeIn 0.35s ease-in-out forwards;
 }
 
 .buttonNotHovered,
 .buttonHovered {
-    width: 20%;
-    cursor: pointer;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    align-self: flex-end;
-    background-color: transparent;
-    border: 1px transparent;
-    font-family: "GT Medium";
-    font-size: 1.025em;
-    gap: 4px;
-    transition: 0.2s all;
+  width: 20%;
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  align-self: flex-end;
+  background-color: transparent;
+  border: 1px transparent;
+  font-family: "GT Medium";
+  font-size: 1.025em;
+  gap: 4px;
+  transition: 0.2s all;
 }
 
 .buttonHovered *,
 .buttonNotHovered * {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .buttonHovered {
-    color: #fff;
+  color: #fff;
 }
 
 .buttonNotHovered {
-    color: #cccccc;
+  color: #cccccc;
 }
 
 .aboutBottom button:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 .up,
 .down {
-    fill: #CCCCCC;
-    height: 16px;
+  fill: #cccccc;
+  height: 16px;
 }
 
 .down {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 ::-webkit-scrollbar {
-    width: 7px;
-  }
-  
+  width: 7px;
+}
 
-  ::-webkit-scrollbar-track {
-    background: transparent;
+::-webkit-scrollbar-track {
+  background: transparent;
+}
 
-  }
-  
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
 
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 10px;
-  }
-  
-
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 .addToCart {
-    background: #1A1A1A;
-    padding: 20px 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 15px;
-    box-sizing: border-box;
-    width: 110%;
+  background: #1a1a1a;
+  padding: 20px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 15px;
+  box-sizing: border-box;
+  width: 110%;
 }
 
 .addToCart h3 {
-    font-family: "GT Light";
-    font-size: 18px;
-    letter-spacing: 1px;
+  font-family: "GT Light";
+  font-size: 18px;
+  letter-spacing: 1px;
 }
 
 .addToCart button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 22px;
-    font-family: "GT Medium";
-    gap: 12px;
-    background-color: transparent;
-    border: 1px transparent;
-    color: #999999;
-    transition: 0.25s all;
-    cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  font-family: "GT Medium";
+  gap: 12px;
+  background-color: transparent;
+  border: 1px transparent;
+  color: #999999;
+  transition: 0.25s all;
+  cursor: pointer;
 }
 
 .addToCart button * {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .addToCart button:active {
-    transform: scale(0.925);
+  transform: scale(0.925);
 }
 
 .add {
-    height: 18px;
-    padding-top: 3px;
-    fill: #999999;
-    transition: 0.25s all;
-    pointer-events: none;
+  height: 18px;
+  padding-top: 3px;
+  fill: #999999;
+  transition: 0.25s all;
+  pointer-events: none;
 }
 
 .infos {
-    display: flex;
-    gap: 14px;
-    align-items: center;
+  display: flex;
+  gap: 14px;
+  align-items: center;
 }
 
 .infos h3 {
-    color: #ccc;
-    font-family: "GT Light";
+  color: #ccc;
+  font-family: "GT Light";
 }
 
 .infos button {
-    width: 26px;
-    height: 26px;
+  width: 26px;
+  height: 26px;
 }
 
 .like,
 .liked {
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
 }
 
 .like {
-    fill: #999;
+  fill: #999;
 
-    transition-duration: 0.3s;
+  transition-duration: 0.3s;
 }
 
 .liked {
-    fill: #F53333;
-    transition-duration: 0.3s;
+  fill: #f53333;
+  transition-duration: 0.3s;
 }
 
 @media screen and (max-width: 1770px) {
-    .gameInfo {
-        width: 35%;
-    }
+  .gameInfo {
+    width: 35%;
+  }
 
-    .aboutTop {
-        height: 200px;
-    }
+  .aboutTop {
+    height: 200px;
+  }
 
-    .aboutBottom {
-        height: 210px !important;
-        font-size: 12px !important;
-        animation: opening 0.5s ease-in-out forwards;
-    }
+  .aboutBottom {
+    height: 210px !important;
+    font-size: 12px !important;
+    animation: opening 0.5s ease-in-out forwards;
+  }
 }
 
 @media screen and (max-width: 1530px) {
-    .gameInfo {
-        width: 28%;
-    }
+  .gameInfo {
+    width: 28%;
+  }
 
-    .aboutBottom {
-        height: 220px !important;
-        font-size: 12px !important;
-        animation: opening 0.5s ease-in-out forwards;
-    }
+  .aboutBottom {
+    height: 220px !important;
+    font-size: 12px !important;
+    animation: opening 0.5s ease-in-out forwards;
+  }
 }
 
 @media screen and (max-width: 1400px) {
-    .game {
-        display: flex;
-        flex-direction: column;
-    }
+  .game {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .gamepage {
-        overflow: scroll;
-    }
+  .gamepage {
+    overflow: scroll;
+  }
 
-    .gameInfo {
-        width: 91%;
-    }
+  .gameInfo {
+    width: 91%;
+  }
 
-    .aboutBottom,
-    .aboutBottomClosed {
-        margin-bottom: 15px;
-    }
+  .aboutBottom,
+  .aboutBottomClosed {
+    margin-bottom: 15px;
+  }
 
-    .open a,
-    .open h4,
-    .buttonHovered,
-    .buttonNotHovered {
-        font-size: 18px !important;
-    }
+  .open a,
+  .open h4,
+  .buttonHovered,
+  .buttonNotHovered {
+    font-size: 18px !important;
+  }
 
-    .aboutBottom {
-        height: 280px !important;
-        font-size: 12px !important;
-        animation: opening 0.5s ease-in-out forwards;
-        padding-top: 40px;
-    }
+  .aboutBottom {
+    height: 280px !important;
+    font-size: 12px !important;
+    animation: opening 0.5s ease-in-out forwards;
+    padding-top: 40px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
-    .aboutTop {
-        height: 240px !important;
-    }
+  .aboutTop {
+    height: 240px !important;
+  }
 }
 
 @media screen and (max-width: 1000px) {
-    header h1 {
-        font-size: 40px;
-    }
+  header h1 {
+    font-size: 40px;
+  }
 }
 
 @media screen and (max-width: 825px) {
-    header h1 {
-        font-size: 32px;
-    }
+  header h1 {
+    font-size: 32px;
+  }
 
-    .aboutTop {
-        height: 270px !important;
-    }
+  .aboutTop {
+    height: 270px !important;
+  }
 
-    .aboutBottom {
-        height: 295px !important;
-        font-size: 12px !important;
-        animation: opening 0.5s ease-in-out forwards;
-        padding-top: 40px;
-    }
+  .aboutBottom {
+    height: 295px !important;
+    font-size: 12px !important;
+    animation: opening 0.5s ease-in-out forwards;
+    padding-top: 40px;
+  }
 }
 
 @media screen and (max-width: 675px) {
-    header h1 {
-        font-size: 26px;
-    }
+  header h1 {
+    font-size: 26px;
+  }
 }
 
 @media screen and (max-width: 590px) {
-    header h1 {
-        font-size: 20px;
-        padding-top: 6px;
-    }
+  header h1 {
+    font-size: 20px;
+    padding-top: 6px;
+  }
 }
 
 @media screen and (max-width: 590px) {
-    header h1 {
-        font-size: 20px;
-        padding-top: 6px;
-    }
+  header h1 {
+    font-size: 20px;
+    padding-top: 6px;
+  }
 
-    .gamepageContent {
-        padding: 30px 25px;
-    }
+  .gamepageContent {
+    padding: 30px 25px;
+  }
 
-    .aboutTop {
-        padding: 30px 40px 30px 34px;
-    }
+  .aboutTop {
+    padding: 30px 40px 30px 34px;
+  }
 
-    .open a,
-    .open h4,
-    .buttonHovered,
-    .buttonNotHovered {
-        font-size: 16px !important;
-    }
+  .open a,
+  .open h4,
+  .buttonHovered,
+  .buttonNotHovered {
+    font-size: 16px !important;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    .game {
-        gap: 15px;
-    }
+  .game {
+    gap: 15px;
+  }
 
-    .aboutTop {
-        height: 320px !important;
-    }
+  .aboutTop {
+    height: 320px !important;
+  }
 
-    header h1 {
-        font-size: 17px;
-        padding-top: 3px;
-    }
+  header h1 {
+    font-size: 17px;
+    padding-top: 3px;
+  }
 
-    .goBack {
-        font-size: 20px;
-    }
+  .goBack {
+    font-size: 20px;
+  }
 
-    .aboutBottom {
-        height: 330px !important;
-        font-size: 12px !important;
-        animation: opening 0.5s ease-in-out forwards;
-        padding-top: 40px;
-    }
+  .aboutBottom {
+    height: 330px !important;
+    font-size: 12px !important;
+    animation: opening 0.5s ease-in-out forwards;
+    padding-top: 40px;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    header h1 {
-        font-size: 14px;
-        padding-top: 3px;
-    }
+  header h1 {
+    font-size: 14px;
+    padding-top: 3px;
+  }
 
-    header {
-        gap: 20px;
-    }
+  header {
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 360px) {
-    .aboutBottom {
-        height: 320px !important;
-    }
+  .aboutBottom {
+    height: 320px !important;
+  }
 
-    .open a,
-    .open h4,
-    .buttonHovered,
-    .buttonNotHovered {
-        font-size: 14px !important;
-    }
+  .open a,
+  .open h4,
+  .buttonHovered,
+  .buttonNotHovered {
+    font-size: 14px !important;
+  }
 
-    .addToCart {
-        gap: 20px;
-    }
+  .addToCart {
+    gap: 20px;
+  }
 
-    .addToCartButton {
-        font-size: 16px !important;
-    }
+  .addToCartButton {
+    font-size: 16px !important;
+  }
 }
 
 @media screen and (max-width: 308px) {
-    .aboutBottom {
-        height: 370px !important;
-    }
+  .aboutBottom {
+    height: 370px !important;
+  }
 }
