--- a/src/Containers/Home/Home.module.css
+++ b/src/Containers/Home/Home.module.css
@@ -2,6 +2,13 @@
   margin: 0;
   padding: 0;
 }
+.butt {
+  padding: 340px;
+  margin: 340px;
+  margin-top: 300px;
+  background-color: blue;
+  border: 5px solid yellow;
+}
 
 .overlap {
   position: absolute;
@@ -83,9 +90,10 @@ a {
 }
 
 .video {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensures the video fills the entire container */
